-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-12-03	pwessel
	* gmtmath.c:		Did not ceck that -Tmin/max has min >= max.
	
2011-12-03	pwessel
	* mgd77/mgd77track.c:	Did not set GMT's time system to Unix before dealing
				with dates.  Now done centrally by MGD77_Init.

2011-12-02	pwessel
	* project.c:		Fixed trouble with -G; this also fixes test cases.
				Added -Ginc[/colat][+] so if + is appended we get a
				segment header with information about the pole for the circle.
				Clarified that it is colatitude and not latitude we append.
				Furthermore, for -G<inc> -bo we failed to write any output;
				this was an old bug also affecting GMT 4.
	* gmt_plot.c:		The mysterious trim_label function was called for both axes
				even if only one had 2 levels of annotations.  Now check per
				axes and document the function better.  This fixes the hovmuller test.

2011-12-01	remko
	* meca/pscoupe.c:	Added -Q option to suppress mechanism files
				Incorporated distaz.c and submeca.c as they were unique to pscoupe.
				Properly mention -a<size>/<P_symbol><T_symbol>
				Properly set default pen for all elements to the one set by -W.
	* meca/psmeca.c:	Let -e<fill> and -g<fill> default to -E<fill> and -G<fill>.
				Set default size of T_symbol and P_symbol to 6p (not inch or cm)
	* meca/pscoupe.c:	==="===
	* meca/*.c:		Numerous bug fixes

2011-11-30	pwessel
	* gmt_support.c:	GMT_getfill got confused when a Windows path C:\etc was
				given as an pattern file (mixed up with :F and :B mechanism).
	* gmt_init.c:		Parsing of -B5+gp<dpi>/<dospath> suffered the same fate.

2011-11-29	pwessel
	* pslegend.c:		Fixed so we can mix filled and non-filled symbols.

2011-11-28	pwessel
	* gmt_plot.c:		Extended the custom axis annotation to any map projection.

2011-11-28	remko
	* meca/*.c:		Reading fontsizes better.

2011-11-27	pwessel